--- a/geoclass_algorithm_new.ipynb
+++ b/geoclass_algorithm_new.ipynb
@@ -2052,6 +2052,40 @@
     "\n",
     "gclss1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cfc8b6de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     2025-26 Winter Term 1\n",
+       "1     2025-26 Winter Term 1\n",
+       "2     2025-26 Winter Term 1\n",
+       "3     2025-26 Winter Term 1\n",
+       "4     2025-26 Winter Term 2\n",
+       "5     2025-26 Winter Term 2\n",
+       "6     2025-26 Winter Term 2\n",
+       "7     2025-26 Winter Term 1\n",
+       "8     2025-26 Winter Term 1\n",
+       "9     2025-26 Winter Term 2\n",
+       "10    2025-26 Winter Term 2\n",
+       "11    2025-26 Winter Term 1\n",
+       "12    2025-26 Winter Term 1\n",
+       "Name: Term, dtype: object"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df5['Term']"
+   ]
   }
  ],
  "metadata": {
